--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Connor Lockman"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/headshot.PNG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science"
   location         : "Ann Arbor, MI"
   email            :
