--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Connor Lockman"
   avatar           : "/images/lockman_headshot.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Science"
+  bio              : "Data Science Portfolio | Master of Science in Information, Data Science & Analytics Candidate"
   location         : "Ann Arbor, MI"
   email            :
   links:
