--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Connor Lockman"
-  avatar           : "/images/lockman.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/lockman.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science Portfolio | Master of Science in Information, Data Science & Analytics Candidate"
   location         : "Ann Arbor, MI"
   email            :
