--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,12 @@
 # main links
 main:
-  - title: "About"
-    url: /about/
-  - title: "Data Science"
-    url: /data-science/
+  - title: "Blogs"
+    url: /Blogs/
+
+  #- title: "About"
+  #  url: /about/
+  #- title: "Data Science"
+  #  url: /data-science/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
