--- a/_config.yml
+++ b/_config.yml
@@ -152,6 +152,11 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/connorlockman1/"
+
+
 
 
 # Reading Files
