--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Blogs"
-    url: /Blogs/
+  - title: "Writing"
+    url: /Writing/
   - title: "Projects"
     url: /Projects/
   - title: "About"
