--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Connor Lockman"
+title                    : "Portfolio"
 title_separator          : "-"
 name                     : "Data Science Portfolio"
 description              : "Data Science Portfolio"
