--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Connor Lockman"
+  name             : ""
   avatar           : "/assets/images/lockman_headshot2.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Scientist | Graduate Student"
   location         : "Ann Arbor, MI"
