--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,7 @@ analytics:
 author:
   name             : ""
   avatar           : "/assets/images/lockman_headshot2.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Scientist
-  Graduate Student"
+  bio              : "Data Scientist | Graduate Student"
   location         : "Ann Arbor, MI"
   email            :
   links:
