--- a/_config.yml
+++ b/_config.yml
@@ -309,3 +309,19 @@ defaults:
     values:
       layout: single
       author_profile: true
+
+#########
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
+defaults:
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
