--- a/_config.yml
+++ b/_config.yml
@@ -323,5 +323,5 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       share: true
