--- a/_config.yml
+++ b/_config.yml
@@ -315,6 +315,7 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+    author_profile: true
 
 defaults:
   # _portfolio
