proj archive nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@ main:
     url: /About/
   - title: "Portfolio"
     url: /Portfolio/
+  - title: "Project"
+    url: /project/
 
   #- title: "About"
   #  url: /about/
