cleaning to portfolio

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "Writing"
-    url: /Writing/
+  - title: "Portfolio"
+    url: /Portfolio/
   - title: "About"
     url: /About/
 
