--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "/assets/images/lockman_headshot4.JPG" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/lockman_headshot4.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Scientist, MSI Candidate @ umich"
   location         : "Ann Arbor, MI"
   email            :
