--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   #- title: "About"
   #  url: /about/
   #- title: "Data Science"
-  #  url: /data-science/
-  # - title: "About"
+    url: /data-science/
+   - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
