--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,9 +8,9 @@ main:
 
   #- title: "About"
   #  url: /about/
-  #- title: "Data Science"
+  - title: "Data Science"
     url: /data-science/
-   - title: "About"
+  # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
